# ruzzle-os

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/arch_aarch64/: Cargo.toml
crates/arch_aarch64/src/: lib.rs
crates/arch_x86_64/: Cargo.toml
crates/arch_x86_64/src/: keyboard.rs  lib.rs  usb_input.rs  vga.rs  virtio_input.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/kernel/: Cargo.toml  linker_aarch64.ld
crates/kernel/src/: aarch64_entry.rs  allocator.rs  boot.rs  console.rs  font.rs  framebuffer.rs  init.rs  lib.rs  main.rs  shell.rs  smp.rs
crates/kernel_core/: Cargo.toml
crates/kernel_core/src/: boot.rs  caps.rs  crypto.rs  elf.rs  initramfs.rs  ipc.rs  lib.rs  module.rs  module_bundle.rs  pmm.rs  process.rs  protection.rs  runtime.rs  scheduler.rs  smp.rs  syscall.rs  vmm.rs
crates/kernel_core/tests/: acceptance.rs
crates/platform_qemu_aarch64_virt/: Cargo.toml
crates/platform_qemu_aarch64_virt/src/: lib.rs
crates/platform_qemu_x86_64/: Cargo.toml
crates/platform_qemu_x86_64/src/: lib.rs
crates/ruzzle_protocol/: Cargo.toml
crates/ruzzle_protocol/src/: caps.rs  console.rs  lib.rs  registry.rs  shell.rs  tlv.rs
crates/user_console_service/: Cargo.toml  module.toml
crates/user_console_service/src/: lib.rs  protocol.rs
crates/user_container_service/: Cargo.toml  module.toml
crates/user_container_service/src/: lib.rs
crates/user_device_manager/: Cargo.toml  module.toml
crates/user_device_manager/src/: lib.rs
crates/user_file_manager/: Cargo.toml  module.toml
crates/user_file_manager/src/: lib.rs
crates/user_fs_service/: Cargo.toml  module.toml
crates/user_fs_service/src/: lib.rs
crates/user_gpu_service/: Cargo.toml  module.toml
crates/user_gpu_service/src/: lib.rs
crates/user_init/: Cargo.toml  module.toml
crates/user_init/src/: lib.rs
crates/user_input_service/: Cargo.toml  module.toml
crates/user_input_service/src/: lib.rs
crates/user_ml_runtime/: Cargo.toml  module.toml
crates/user_ml_runtime/src/: lib.rs
crates/user_net_manager/: Cargo.toml  module.toml
crates/user_net_manager/src/: lib.rs
crates/user_net_service/: Cargo.toml  module.toml
crates/user_net_service/src/: lib.rs
crates/user_puzzle_board/: Cargo.toml
crates/user_puzzle_board/src/: lib.rs
crates/user_rust_toolchain/: Cargo.toml  module.toml
crates/user_rust_toolchain/src/: lib.rs
crates/user_server_stack/: Cargo.toml  module.toml
crates/user_server_stack/src/: lib.rs
crates/user_session_service/: Cargo.toml  module.toml
crates/user_session_service/src/: lib.rs
crates/user_settings_service/: Cargo.toml  module.toml
crates/user_settings_service/src/: lib.rs
crates/user_setup_wizard/: Cargo.toml  module.toml
crates/user_setup_wizard/src/: lib.rs
crates/user_sysinfo_service/: Cargo.toml  module.toml
crates/user_sysinfo_service/src/: lib.rs
crates/user_text_editor/: Cargo.toml  module.toml
crates/user_text_editor/src/: lib.rs
crates/user_tui_shell/: Cargo.toml  module.toml
crates/user_tui_shell/src/: lib.rs
crates/user_user_service/: Cargo.toml  module.toml
crates/user_user_service/src/: lib.rs
docs/: boot.md  identity_roadmap.md  implementation.md  pieces.md  protocols.md  slot_contracts.md  spec.md
modules/: README.md  file-browser.rpiece  index.toml  net-panel.rpiece  note-piece.rpiece  vim-piece.rpiece
slot_contracts/: ruzzle.slot.console@1.toml  ruzzle.slot.container@1.toml  ruzzle.slot.device@1.toml  ruzzle.slot.editor@1.toml  ruzzle.slot.filemgr@1.toml  ruzzle.slot.fs@1.toml  ruzzle.slot.gpu@1.toml  ruzzle.slot.init@1.toml  ruzzle.slot.input@1.toml  ruzzle.slot.ml@1.toml  ruzzle.slot.net@1.toml  ruzzle.slot.netmgr@1.toml  ruzzle.slot.server@1.toml  ruzzle.slot.session@1.toml  ruzzle.slot.settings@1.toml  ruzzle.slot.setup@1.toml  ruzzle.slot.shell@1.toml  ruzzle.slot.sysinfo@1.toml  ruzzle.slot.toolchain@1.toml  ruzzle.slot.user@1.toml
tools/: build_bundle_arm.sh  build_iso_arm.sh  build_iso_x86.sh  build_limine.sh  ci_coverage.sh  doctor.sh  generate_slot_docs.py  limine.conf  market_scan.py  mk_initramfs.py  module_lint.py  new_piece.sh  pack_external_module.sh  pack_module.py  rpiece_build.sh  run_qemu_arm.sh  run_qemu_x86.sh  slot_lint.py
