[workspace]
resolver = "2"
members = [
    "crates/hal",
    "crates/kernel_core",
    "crates/kernel",
    "crates/arch_x86_64",
    "crates/arch_aarch64",
    "crates/platform_qemu_x86_64",
    "crates/platform_qemu_aarch64_virt",
    "crates/ruzzle_protocol",
    "crates/user_init",
    "crates/user_console_service",
    "crates/user_tui_shell",
    "crates/user_fs_service",
    "crates/user_net_service",
    "crates/user_user_service",
    "crates/user_text_editor",
    "crates/user_file_manager",
    "crates/user_settings_service",
    "crates/user_session_service",
    "crates/user_setup_wizard",
    "crates/user_sysinfo_service",
    "crates/user_puzzle_board",
]

default-members = [
    "crates/hal",
    "crates/kernel_core",
    "crates/ruzzle_protocol",
    "crates/user_init",
    "crates/user_console_service",
    "crates/user_tui_shell",
    "crates/user_fs_service",
    "crates/user_net_service",
    "crates/user_user_service",
    "crates/user_text_editor",
    "crates/user_file_manager",
    "crates/user_settings_service",
    "crates/user_session_service",
    "crates/user_setup_wizard",
    "crates/user_sysinfo_service",
    "crates/user_puzzle_board",
]
