[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
arch_x86_64 = { path = "../arch_x86_64", optional = true }
arch_aarch64 = { path = "../arch_aarch64", optional = true }
platform_qemu_x86_64 = { path = "../platform_qemu_x86_64", optional = true }
platform_qemu_aarch64_virt = { path = "../platform_qemu_aarch64_virt", optional = true }

hal = { path = "../hal" }
kernel_core = { path = "../kernel_core" }
limine = "0.5.0"
linked_list_allocator = "0.10"
spin = "0.9"
user_file_manager = { path = "../user_file_manager" }
user_fs_service = { path = "../user_fs_service" }
user_net_service = { path = "../user_net_service" }
user_puzzle_board = { path = "../user_puzzle_board" }
user_session_service = { path = "../user_session_service" }
user_settings_service = { path = "../user_settings_service" }
user_setup_wizard = { path = "../user_setup_wizard" }
user_sysinfo_service = { path = "../user_sysinfo_service" }
user_text_editor = { path = "../user_text_editor" }
user_tui_shell = { path = "../user_tui_shell" }
user_user_service = { path = "../user_user_service" }

[features]
default = []
x86_64 = ["arch_x86_64"]
aarch64 = ["arch_aarch64"]
qemu_x86_64 = ["platform_qemu_x86_64"]
qemu_virt = ["platform_qemu_aarch64_virt"]
kernel_bin = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"
required-features = ["kernel_bin"]
